Add more about linked data

--- a/qri-deterministic_querying/v2.md
+++ b/qri-deterministic_querying/v2.md
@@ -322,7 +322,7 @@ A `Dataset` contains numerous additional metadata fields that provide context an
 
 ## Requirements for metadata interoperability
 
-A `Dataset` is where metadata about data and data operations is stored.  It is an express design goal of this scheme that it can support, at minimum, first-order metadata formats that are in use today.  We want to build on as many hard-earned lessons as possible from the Collections, Libraries, Archives & Museum communities (CLAM) for archival needs.
+A `Dataset` is where metadata about data and data operations is stored.  It is an express design goal of this scheme that it can support, at minimum, first-order metadata formats that are in use today.  We also want to build on as many hard-earned lessons as possible from the Collections, Libraries, Archives & Museum communities (CLAM) for archival needs.
 
 The challenge is that while `Dataset` can and should support arbitrary metadata, it must also must place some restrictions on the use of reserved keywords.  The approach followed here is influenced by Project Open Data [@pod2017resources]; we compare the metadata fields used in several prominent metadata formats, and select a subset that can cover the minimum of many formats using a common set of terms whenever possible.  We focus in particular on the Data Catalog vocabulary [@dcat2014], CKAN/DKAN [@ckan2017], Schema.org [@guha2016schema; @schema_org_2012], the Open Knowledge Foundation datapackage [@frictionlessdata2017] format, and the DataVerse APIs [@king2007introduction; @crosas2011dataverse].  By making use of same-term metadata wherever possible, and placing restrictions on fields that intersect and cover the minimum information across these formats, we leave open the potential to write software libraries that can translate `Dataset` metadata to/from all of these metadata standards.
 
@@ -334,12 +334,38 @@ Aside from the caveat of using content-addressed identifiers instead of URLs, it
 
 # Integration with linked data
 
-Other schemes for linking distributed data sets exist, particularly in the form of Linked Data [@heath2011linked], but the methods of querying and accessing data currently involve database access and retrieval. With the approach outlined here, the result of any operation upon a dataset is a structure that can be utilized by any number of outside tools capable of parsing widely-adopted formats. It is an explicit design goal to present natural interoperability. It should be possible to traverse all recorded operations without the use of any database technology.
+Other schemes for linking distributed data sets exist, particularly in the form of Linked Data [@heath2011linked], but the methods of querying and accessing data currently involve database access and retrieval.  With the approach outlined here, the result of any operation upon a dataset is a structure that can be utilized by any number of outside tools capable of parsing widely-adopted formats. It is an explicit design goal to present natural interoperability. It should be possible to traverse all recorded operations without the use of any database technology.
 
-The first step toward realizing the value of this interoperability will be to add support for the InterPlanetary Linked Data specification, IPLD [@ipld2017]. Through use of an IPLD _adapter_ it will be possible to coordinate query results with other linked data structures like blockchain-based cryptocurrencies or git version histories. This data-format bridging opens up possilibities like creating smart contracts on data procuring & fullfillment (ehterium-qri linking), or syncing formal data schemas & test data with source code (git-qri linking).
+The first step toward realizing the value of this interoperability will be to add support for the InterPlanetary Linked Data specification, IPLD [@ipld2017].  IPLD is the linked data complement to IPFS; it allows all hash-linked data structures to be treated using a unified data model analogous to linked data in the Semantic Web sense [@auer2014linked; @heath2011linked].  Essentially, it defines conventions for writing links between objects, such that the link is content-addressed.  This allows linked paths to be expressed from one object, through middle objects, to a target object---much like linked data in general.
 
-**TO BE COMPLETED**
+## Graphs of datasets
 
+Through inclusion of key metadata structures, the above can be coerced into a graph of datasets:
+
+```json
+{
+  "query" : "1220c9bb19b66f7960b6ab7624b9e043969e2ba7181e834441c0303d872832d3fd50",
+  "dataset" : "1220f76a4f68cdb903a20ee3e70d250a77647e2503b1150073cad30eda8381840986",
+  "children" : [
+    { "dataset" : "1220c9bb19b66f7960b6ab7624b9e043969e2ba7181e834441c0303d872832d3fd50" }
+  ]
+}
+```
+
+In this form, it is always possible to trace query-derived dataset back to its source data for as long as the data remains on the network. So long as all necessary query engines, platforms, and hashes are present, it should be possible to traverse machine replicate a query graph completely.
+
+This query graph can then be written as an IPLD graph, thereby allowing IPFS-native traversal of this query graph as well as opening up a number of opportunities for interoperability with other tools that may in turn produce resources that contribute back to this query graph by different means.
+
+## Interaction with Linked Open Data
+
+
+
+
+## Linking to other distributed frameworks
+
+Content addressing via hashes is not limited to IPFS: git, Ethereum and other distributed systems also use content addressing via hashes.  IPLD is designed in such a way that it can work with other hash-based content addressing systems.  Thus, IPLD provides a neutral, uniform way to address and link entities across different hash-based distributed systems---IPFS, git, Ethereum, and others.
+
+This opens up additional potential for a deterministic querying processor.  Through use of an IPLD _adapter_, it will be possible to coordinate query results with other linked data structures like blockchain-based cryptocurrencies or git version histories.  This data-format bridging opens up possilibities for connecting deterministic querying to other kinds of resources.  For example, it should be posible to take advantage of Ethereum to create smart contracts for procuring data and fulfilling processing and analysis tasks.  To take another example, an IPLD adapter could connect formal data schemas and test data with source code to process that data, referencing specific versions of source code stored using git.
 
 # Storage efficiency
 
@@ -397,8 +423,6 @@ Do you want to claim that a certain series of data manipulation and calculations
 ## Software independence
 
 By forcing the database to output to a standard format, the software version (even the entire application) that operates on a data set can change at any point in the history of changes to a dataset.  The software implementation does not matter, as long as it works according to the procedures described here, and reads and writes data and queries in the standard format defined by deterministic querying.  This makes it possible to swap out different tools in the chain of operations, whether to take advantage of implementation improvements (perhaps because more efficient software is developed) or to optimize other characteristics.  It also provides future-proofing: the results of using a tool can persist long after the usefulness of the tool itself has expired.
-
-
 
 
 # Conclusion
