Fix part 2 of issue #7.
This does not address the abstract vs concrete Structure distinction.

--- a/qri-deterministic_querying/v2.md
+++ b/qri-deterministic_querying/v2.md
@@ -174,7 +174,7 @@ Conversely, if the `Data` changes but the `Structure` does not, the new `Dataset
 <img src="graphics/data-changes.png">
 </p>
 
-Finally, if the `Structure` changes, the `Data` necessarily changes as well, which means the new `Dataset` object points to new `Structure` and `Data` objects.  This indicates that the underlying data set has changed in such a way---either in structure or in values---that its hash signature is no longer the same.
+Finally, if the `Structure` changes, the `Data` _may_ need to change as well, if the structural change affects how the data is read or written.  When the `Structure` change _does_ require a `Data` change, it is a schema migration.  A new `Dataset` object is created and it points to two new `Structure` and `Data` objects.  This indicates that the underlying data set has changed in such a way---either in structure or in values---that its hash signature is no longer the same.
 
 <p align="center">
 <img src="graphics/structure-changes.png">
