Partial fix for part 1 of issue #7.
My current thinking is that the abstract vs concrete distinction of
Structure is more of an implementation detail in Qri, and may not be
worth bringing up in this discussion.  I think the basic point of the
deterministic querying approach can be described without delving into
this.  Might be wrong...

--- a/qri-deterministic_querying/v2.md
+++ b/qri-deterministic_querying/v2.md
@@ -142,7 +142,7 @@ The detailed specification of `Structure` is given elsewhere, but as the example
 
 The field `schema` merits some additional explanation.  Many formats such as CSV do not internally define the data types of values and provide no standard way of communicating this information, which forces the requirement to define an approach for externalizing it outside of a `Data` file.  It turns out, however, that describing the format explicitly in a generalized way also makes it possible to store and reuse those descriptions independently: they become another object in the content-addressed storage space, hashed and stored like everything else.
 
-In fact, `Structure` is abstracted in such a way that it contains nothing about _meaning_.  If the values of a `Data` file change, the `Structure` can remain the same; if multiple `Data` objects anywhere on an IPFS network all have the same structure, the `Structure` object can remain the same.  _This is true even if the `Data` objects are about entirely different things_.  As will become more clear below, this is part of the fundamental insight that makes deterministic querying possible.
+In fact, `Structure` is designed in such a way that it contains nothing about _meaning_.  If the values of a `Data` file change, the `Structure` can remain the same; if multiple `Data` objects anywhere on an IPFS network all have the same structure, the `Structure` object can remain the same.  This is true even if the `Data` objects are about entirely different things_.  As will become more clear below, this is part of the fundamental insight that makes deterministic querying possible.
 
 <!--
 Finally, it is worth noting that we focus on widely-used formats such as CSV as foundational storage formats for developing deterministic querying, but the extensions to other types of data should be clear.
