More work on metadata section

--- a/qri-deterministic_querying/v2.md
+++ b/qri-deterministic_querying/v2.md
@@ -314,11 +314,20 @@ This brings all of the elements together: the fields for the concrete `query_str
 
 A `Dataset` contains numerous additional metadata fields that provide context and useful information about the nature of what the query is about.  A timestamp and title round out the example above, but other metadata fields exist.
 
+
+# Metadata
+
+The description so far has has touched only briefly on metadata, but metadata is a fundamental ingredient in all open data applications.  Data resources are useless to humans without descriptive metadata.  It is commonly understood that without a proper description of the resource, it is impossible to develop meaninful ontological connections with other resources.  At the machine level it may be perfectly fine to compare two fields from different `Data` objects named `precip` of type `float`, but clearly there will be a problem if one field is measured in millimeters and the other is measured in inches.
+
+## Metadata in `Dataset`
+
+A `Dataset` is where metadata about data and data operations is stored.  It is an express design goal of deterministic querying that it can support, at minimum, first-order metadata formats that are in use today.  We also want to build on as many hard-earned lessons as possible from the Collections, Libraries, Archives & Museum communities (CLAM) for archival needs.
+
+`Dataset` acts to hold descriptive metadata, and is intended to be able to hold arbitrary metadata content.  Descriptive metadata can and should be _author attributed_, associating descriptive claims about a resource with a cyptographic keypair which may represent a person, group of people, or software.  The separation of metadata from data files allows metadata to change with a higher frequency.  Through the use of linked data (discussed in the next setion), any number of resource definitions to form Directed Acyclic Graphs (DAGs).  This encourages resource definitions to participate in multiple DAG histories. This multiple-history approach allows connection between, say, a principle resource and a "cleaned" variant through descriptive metadata. This also allows queries to participate in the history formation process. Using these techniques it is possible to use querying a tool for transforming data into an alternate form, and writing the query to a DAG in a form that facilitates greater machine-repeatbility.
+
 ## Requirements for metadata interoperability
 
-A `Dataset` is where metadata about data and data operations is stored.  It is an express design goal of this scheme that it can support, at minimum, first-order metadata formats that are in use today.  We also want to build on as many hard-earned lessons as possible from the Collections, Libraries, Archives & Museum communities (CLAM) for archival needs.
-
-The challenge is that while `Dataset` can and should support arbitrary metadata, it must also must place some restrictions on the use of reserved keywords.  The approach followed here is influenced by Project Open Data [@pod2017resources]; we compare the metadata fields used in several prominent metadata formats, and select a subset that can cover the minimum of many formats using a common set of terms whenever possible.  We focus in particular on the Data Catalog vocabulary [@dcat2014], CKAN/DKAN [@ckan2017], Schema.org [@guha2016schema; @schema_org_2012], the Open Knowledge Foundation datapackage [@frictionlessdata2017] format, and the DataVerse APIs [@king2007introduction; @crosas2011dataverse].  By making use of same-term metadata wherever possible, and placing restrictions on fields that intersect and cover the minimum information across these formats, we leave open the potential to write software libraries that can translate `Dataset` metadata to/from all of these metadata standards.
+A technical challenge in designing useful support for metadata is that while `Dataset` can and should support arbitrary metadata, it must also must place some restrictions on the use of reserved keywords.  The approach followed here is influenced by Project Open Data [@pod2017resources]; we compare the metadata fields used in several prominent metadata formats, and select a subset that can cover the minimum of many formats using a common set of terms whenever possible.  We focus in particular on the Data Catalog vocabulary [@dcat2014], CKAN/DKAN [@ckan2017], Schema.org [@guha2016schema; @schema_org_2012], the Open Knowledge Foundation datapackage [@frictionlessdata2017] format, and the DataVerse APIs [@king2007introduction; @crosas2011dataverse].  By making use of same-term metadata wherever possible, and placing restrictions on fields that intersect and cover the minimum information across these formats, we leave open the potential to write software libraries that can translate `Dataset` metadata to/from all of these metadata standards.
 
 <!--
 FIXME not sure if this is still needed:
