Took a shot at linked open data

--- a/qri-deterministic_querying/v2.md
+++ b/qri-deterministic_querying/v2.md
@@ -69,7 +69,14 @@ If it were possible to short-circuit some of the steps in the architectural patt
 
 The idea that the network itself could be "queried for data" as if it where a database may seem ludicrous at first.  The rest of this white paper describes how this _can_ be achieved, using a combination of technologies and architectural patterns.  Renewed attention to distributed, content-addressed networks with a robust linked-data structure provides the foundation necessary for achieving this.  What follows is a plan for a suite of tools that collectively provide the necessary components to be able to query a network, with the explicit design goal of facilitating the accumulation of results through data that is held on the network.
 
-<!-- need compare this to "network is the database" -->
+<!--
+maybe add more about linked data:
+
+Linked Data is explicitly oriented towards providing data as a service: URIs need to get resolved, data sources get queried, data is retrieved, and (usually) data needs to be translated.  These methods of querying and accessing Linked Data currently involve database access and retrieval.
+
+maybe also compare this to "network is the database" -->
+-->
+
 
 # Data, data structures, hashes, and queries
 
@@ -323,7 +330,7 @@ The description so far has has touched only briefly on metadata, but metadata is
 
 A `Dataset` is where metadata about data and data operations is stored.  It is an express design goal of deterministic querying that it can support, at minimum, first-order metadata formats that are in use today.  We also want to build on as many hard-earned lessons as possible from the Collections, Libraries, Archives & Museum communities (CLAM) for archival needs.
 
-`Dataset` acts to hold descriptive metadata, and is intended to be able to hold arbitrary metadata content.  Descriptive metadata can and should be _author attributed_, associating descriptive claims about a resource with a cyptographic keypair which may represent a person, group of people, or software.  The separation of metadata from data files allows metadata to change with a higher frequency.  Through the use of linked data (discussed in the next setion), any number of resource definitions to form Directed Acyclic Graphs (DAGs).  This encourages resource definitions to participate in multiple DAG histories. This multiple-history approach allows connection between, say, a principle resource and a "cleaned" variant through descriptive metadata. This also allows queries to participate in the history formation process. Using these techniques it is possible to use querying a tool for transforming data into an alternate form, and writing the query to a DAG in a form that facilitates greater machine-repeatbility.
+`Dataset` acts to hold descriptive metadata, and is intended to be able to hold arbitrary metadata content.  Descriptive metadata can and should be _author attributed_, associating descriptive claims about a resource with a cyptographic keypair which may represent a person, group of people, or software.  The separation of metadata from data files allows metadata to change with a higher frequency.  Through the use of Linked Data (discussed in the next setion), any number of resource definitions to form Directed Acyclic Graphs (DAGs).  This encourages resource definitions to participate in multiple DAG histories. This multiple-history approach allows connection between, say, a principle resource and a "cleaned" variant through descriptive metadata. This also allows queries to participate in the history formation process. Using these techniques it is possible to use querying a tool for transforming data into an alternate form, and writing the query to a DAG in a form that facilitates greater machine-repeatbility.
 
 ## Requirements for metadata interoperability
 
@@ -335,9 +342,11 @@ FIXME not sure if this is still needed:
 Aside from the caveat of using content-addressed identifiers instead of URLs, it is an express design goal that first-order metadata supported in datasets in this scheme be collected with an eye toward supporting existing metadata formats.
 -->
 
-# Integration with linked data
+# Integration with Linked Data and Linked Open Data
 
-Other schemes for linking distributed data sets exist, particularly in the form of Linked Data [@heath2011linked], but the methods of querying and accessing data currently involve database access and retrieval.  With the approach outlined here, the result of any operation upon a dataset is a structure that can be utilized by any number of outside tools capable of parsing widely-adopted formats. It is an explicit design goal to present natural interoperability. It should be possible to traverse all recorded operations without the use of any database technology.
+Other schemes for linking distributed data sets exist, particularly in the form of Linked Data [@heath2011linked].  The principles of Linked Data are relatively straightforward: data is represented as subject-predicate-object triples expressed in RDF, where everything (entites, predicates, data sources) uses URIs as identifiers, and data is made accessible over HTTP.  The standard search mechanism for Linked Data is SPARQL, patterned after SQL.  _Linked Open Data_ is simply open data (i.e., data made available under open license terms) made available through Linked Data technologies.
+
+There are similarities between Linked Data and deterministic querying, and it is an explicit design goal to advance natural interoperability.  As with Linked Data, the deterministic querying approach is intended to allow the result of any operation on a dataset to be used by any number of outside software tools able to parse widely-adopted formats.  The main difference is that it should be possible to traverse all recorded operations without the use of any database technology.
 
 The first step toward realizing the value of this interoperability will be to add support for the InterPlanetary Linked Data specification, IPLD [@ipld2017].  IPLD is the linked data complement to IPFS; it allows all hash-linked data structures to be treated using a unified data model analogous to linked data in the Semantic Web sense [@auer2014linked; @heath2011linked].  Essentially, it defines conventions for writing links between objects, such that the link is content-addressed.  This allows linked paths to be expressed from one object, through middle objects, to a target object---much like linked data in general.
 
@@ -358,11 +367,6 @@ Through inclusion of key metadata structures, the above can be coerced into a gr
 In this form, it is always possible to trace query-derived dataset back to its source data for as long as the data remains on the network. So long as all necessary query engines, platforms, and hashes are present, it should be possible to traverse machine replicate a query graph completely.
 
 This query graph can then be written as an IPLD graph, thereby allowing IPFS-native traversal of this query graph as well as opening up a number of opportunities for interoperability with other tools that may in turn produce resources that contribute back to this query graph by different means.
-
-## Interaction with Linked Open Data
-
-
-
 
 ## Linking to other distributed frameworks
 
