initial addition of hash-collision section

--- a/qri-deterministic_querying/v2.md
+++ b/qri-deterministic_querying/v2.md
@@ -368,6 +368,50 @@ In this form, it is always possible to trace query-derived dataset back to its s
 
 This query graph can then be written as an IPLD graph, thereby allowing IPFS-native traversal of this query graph as well as opening up a number of opportunities for interoperability with other tools that may in turn produce resources that contribute back to this query graph by different means.
 
+## Hash Collision & Discovery
+
+So the question stands, why go to all this effort calculating "pure" queries and "abstract" structures? The advantage of using these abstract forms becomes clear when isolated & placed on a content-addressed network. At time of addition, we separate out the abstract structure as an independant file & write it to the network, which gives us a concrete hash. For example, assuming an abstract structure has the following hash:
+
+```
+QmeSYHbiK6p1Hxtd5opsc9KvJqbzMnJ1ZNmL3u5A6oMM3W
+```
+
+Instead of storing the concrete abstract structure in the dataset, we store reference to this hash.
+```
+{
+  "name" : "",
+  ...
+  "structure" : {
+    ...
+  }
+  "abstractStructure" : "/ipfs/QmeSYHbiK6p1Hxtd5opsc9KvJqbzMnJ1ZNmL3u5A6oMM3W"
+}
+```
+
+Sometime later, we come upon another dataset who's abstract structure is the same. When true, the hash of the abstract structure will _collide_ with the previous hash. Once stored on the network, we can determine that these two datasets are machine-interoperable through simple string comparison. These datasets may in fact not be directly relatable due to practical differences in data collection methods or other conventions (which will hopefully be annotated in the concrete dataset strcture defintinions), but through this process we gain the crucial knowledge that these two datasets are interoperable at the machine level.
+
+<p align="center">
+  <img src="graphics/shared_abstract_structures.png">
+</p>
+
+This collision property creates a naturally-occuring traversable graph if data interchangability. Given any collection of datasets, it is possible to "discover" if any of datasets are interchangable through comparison of their abstract structures. This represents a step forward in getting data "stacking" to work.
+
+We take this concept one step further by having queries store references to abstract structures. If the first dataset is used in a query we know with confidence that we can run the second dataset through the same query.
+
+<p align="center">
+  <img src="graphics/shared_abstract_structure_in_query.png">
+</p>
+
+In this form, queries become reusable. Anyone who has written a nontrivial SQL query can attest to the desire to maximize the value of this labour.
+
+
+## Structure & Query Analysis
+
+While this natural interoperability is of great benefit to end users, a secondary benefit arises over time as the abstract structure & query address space is populated. These abstract forms limit the size of the hash space that will be consumed to a meaninfully small number of permutations. As more dataset & queries are added to the network, we can collect & analyze this address space for additional insights. Enumerating the frequency of occurance of different types of abstract structures will allow us to build tools that steer datasets toward these naturally arising common-forms, which will add to the collective usefulness of these forms.
+
+We can leverage this abstract interoperability to cut across different subjects of research. Because structures from vastly different areas of research may share the same abstract structure, they are natrually connected by the network. In this form, a number of "false positive" connections will naturally arise, showing the interoperability of seemingly unrelated datasets from dramatically different areas of research. With deterministic querying it is entirely possible that, for example, gorilla population data may hash-collide with data on the population of the city of London. While this may seem nonsensical, we believe this form of toll-free comparibility will encourage users to conceive of entirely new uses for data that had gone previously undiscovered. Combined with machine learning (particulary random forest decision trees), it is possible to have a computer chase down any number of these data comparison permutations looking for new insights from hard-earned data & queries.
+
+
 ## Linking to other distributed frameworks
 
 Content addressing via hashes is not limited to IPFS: git, Ethereum and other distributed systems also use content addressing via hashes.  IPLD is designed in such a way that it can work with other hash-based content addressing systems.  Thus, IPLD provides a neutral, uniform way to address and link entities across different hash-based distributed systems---IPFS, git, Ethereum, and others.
