--- a/qri-deterministic_querying/v2.md
+++ b/qri-deterministic_querying/v2.md
@@ -197,7 +197,7 @@ In the abstract, information retrieval is the process of obtaining information f
 Queries written in SQL make reference to columns in a tabular database, and express conditions that values must satisfy to be selected. Here is an example from the `precip` dataset referenced above:
 
 ```sql
-SELECT datestamp, lat, lng, precip\_amt FROM precip WHERE precip_amt > 1000
+SELECT datestamp, lat, lng, precip_amt FROM precip WHERE precip_amt > 1000
 ```
 
 This query references a table in a database (`precip`) and columns within that table (`datestamp`, `lat`, `lng`, `precip_amt`), and stipulates a conditional expression (`precip_amt > 1000`) that certain column values must satisfy.  Note that this query knows nothing about the purpose of the database: all that matters is that the table has four columns and the expression `precip_amt > 1000` makes syntactic sense for the kinds of values in the table. Although labels such as `lat`, `lng` and `precip` may have meaning to human readers, in reality the labels in SQL have absolutely no semantic meaning to the database itself. This concept is nothing new---it is by design in SQL, so that database systems can be applied to many uses and types of data.
@@ -330,7 +330,7 @@ A `Dataset` contains numerous additional metadata fields that provide context an
 
 ## Hash Collision & Discovery
 
-So the question stands, why go to all this effort calculating abstract queries and structures? The advantage of using these abstract forms becomes clear when isolated & placed on a content-addressed network. At time of addition, we separate out the abstract structure as an independant file & write it to the network, which gives us a concrete hash. For example, here is the above output dataset in it's referenced form:
+So the question stands, why go to all this effort calculating abstract queries and structures? The advantage of using these abstract forms becomes clear when isolated & placed on a content-addressed network. At time of addition, we separate out the abstract structure as as independant files & write each to the network, which gives us a concrete hash that we store in `Dataset` as a reference. For example, here is the above output dataset in it's referenced form:
 
 ```json
 {
