Switch to using svg version of population examples

--- a/qri-deterministic_querying/v2.md
+++ b/qri-deterministic_querying/v2.md
@@ -354,7 +354,7 @@ Instead of storing the abstract structures itself in the dataset, we store the _
 Sometime later, we come upon another dataset who's abstract structure is the same. When true, the hash of the abstract structure will _collide_ with the previous hash. Once stored on the network, we can determine that these two datasets are machine-interoperable through simple string comparison of the field references. These datasets may in fact not be directly relatable due to practical differences in data collection methods or other conventions (which will hopefully be annotated in the concrete dataset strcture defintinions, which will carry a much higher degree of variance), but through this process we gain the crucial knowledge that these two datasets are interoperable at the machine level.
 
 <p align="center">
-  <img src="graphics/shared_abstract_structure.png">
+  <img width="500pt" src="graphics/population-eg-datasets.svg">
 </p>
 
 This collision property creates a naturally-occuring traversable graph if data interchangability. Given any collection of datasets, it is possible to "discover" if any of datasets are interchangable through comparison of their abstract structures. This represents a step forward in getting data "stacking" to work.
@@ -362,7 +362,7 @@ This collision property creates a naturally-occuring traversable graph if data i
 We take this concept one step further by having queries store references to abstract structures, and storing queries themselves as hash-references. If the first dataset is used in a query we know with confidence that we can run the second dataset through the same query.
 
 <p align="center">
-  <img src="graphics/shared_abstract_structure_in_query.png">
+  <img width="500pt" src="graphics/population-eg-query.svg">
 </p>
 
 In this form, queries become reusable by any dataset who's abstract structures match. Anyone who has written a nontrivial SQL query can attest to the desire to maximize the value of this labour. While this "query reuse" will be nonsensical in many forms, knowing that a query _can_ be reused means that User interfaces can suggest "template" queries that may help reduce repeated work. This form of abstraction also opens up the possibilities of chaining multiple queries together to form data pipelines, flowing new datasets through a cascade of queries, producing a number of resulting datasets.
